turtleart.lessons.turtleart.Main.Stairs.scala.error
Source:6: error: not found: value avane
		avane(50)
                ^