turtleart.lessons.turtleart.Main.Stairs.scala.code
override def run() {
	for (i <- 1 to 6){
		avance(50)
		droite(90)
		avane(50)
		droite(90)
	}
}
